--- a/springboot-crud-rest-app/src/main/resources/public/home.html
+++ b/springboot-crud-rest-app/src/main/resources/public/home.html
@@ -1,3 +1,3 @@
-<div style="background-image:url(img/bgImg.png);">
+<div class="homeDiv" style="background-image:url(img/bgImg.png);">
 <h1>Home</h1>
 </div>
