--- a/springboot-crud-rest-app/src/main/resources/public/index.html
+++ b/springboot-crud-rest-app/src/main/resources/public/index.html
@@ -297,8 +297,7 @@ app.controller('indexController',['$scope','$location', "$timeout", function ($s
 }]);
 app.controller("myCtrl", ['$scope', '$window','$location','$rootScope', function($scope, $window, $location,$rootScope){
 	//$scope.loggedIn = true;    
-	
-
+	//$window.location.href='http://localhost:8086/LoginPage.html';
 	  
 	}]);
 app.controller("EmpController", ['$scope', '$routeParams' ,'$window' ,'$rootScope', function($scope, $routeParams , $window ,$rootScope ){
