--- a/springboot-crud-rest-app/src/main/resources/public/customer.html
+++ b/springboot-crud-rest-app/src/main/resources/public/customer.html
@@ -7,7 +7,7 @@
 <input name="" type="button"  style="float: right;margin: 1%; " class="btn btn-primary" id="" value="Create" ng-click="createCust()" >
 </div>
 </div>
-<table id="manage-customer-table" class="custTable" datatable="ng" dt-options="cm.dtCustomer" dt-column-defs="cm.dtColumnDefs" style="width: 90%;">
+<table id="manage-customer-table" class="custTable table table-bordered" datatable="ng" dt-options="cm.dtCustomer" dt-column-defs="cm.dtColumnDefs" style="width: 90%;">
 					<thead>
 						<tr>
 							 <!-- <th scope="col">
