--- a/springboot-crud-rest-app/src/main/resources/public/index.html
+++ b/springboot-crud-rest-app/src/main/resources/public/index.html
@@ -91,7 +91,7 @@
       <!-- Sidebar -->
       <div id="sidebar-wrapperMain" >
       <ul id="sidebar_menu" class="sidebar-nav">
-           <li class="sidebar-brand"><a class="menu-toggle" id="home" ng-click="redirectUrl($event)" href="#">Home<i class="fa fa-bars sub_icon" aria-hidden="true"></i></a></li>
+           <li class="sidebar-brand"><a class="menu-toggle" id="home" ng-click="redirectUrl($event)" href="#">Dashboard<i class="fa fa-bars sub_icon" aria-hidden="true"></i></a></li>
       </ul>
       <ul  class="sidebar-nav">  
 	  <li class="sidebar-brand"><a id="customer_master"  ng-click="redirectUrl($event)">Customer<i class="fa fa-user sub_icon" aria-hidden="true"></i></a></li>
