--- a/springboot-crud-rest-app/src/main/resources/public/vendor.html
+++ b/springboot-crud-rest-app/src/main/resources/public/vendor.html
@@ -1,7 +1,7 @@
 <div>
 <div>
 <input name="" type="button"  style="float: right;margin: 1%; " class="btn btn-primary" id="" value="Create" ng-click="createVendor()" >
-<table id="manage-vendor-table" class="vendorTable" datatable="ng" dt-options="vm.dtVendor" dt-column-defs="vm.dtColumnDefs"  style="width: 90%;">
+<table id="manage-vendor-table" class="vendorTable table table-bordered" datatable="ng" dt-options="vm.dtVendor" dt-column-defs="vm.dtColumnDefs"  style="width: 90%;">
 					<thead>
 						<tr>
 							 <!-- <th scope="col">
