--- a/springboot-crud-rest-app/src/main/resources/public/employee.html
+++ b/springboot-crud-rest-app/src/main/resources/public/employee.html
@@ -1,7 +1,7 @@
 <div >
 <div>
 <input name="" type="button"  style="float: right;margin: 1%; " class="btn btn-primary" id="" value="Create" ng-click="createEmp()" >
-<table id="manage-employee-table" class="custTable" datatable="ng" dt-options="em.dtOptions" dt-column-defs="em.dtColumnDefs" style="width: 90%;">
+<table id="manage-employee-table" class="custTable table table-bordered" datatable="ng" dt-options="em.dtOptions" dt-column-defs="em.dtColumnDefs" style="width: 90%;">
 					<thead>
 						<tr>
 							 <!-- <th scope="col">
