--- a/springboot-crud-rest-app/src/main/resources/public/user.html
+++ b/springboot-crud-rest-app/src/main/resources/public/user.html
@@ -1,7 +1,7 @@
 <div >
 <div>
 <input name="" type="button"  style="float: right;margin: 1%; " class="btn btn-primary" id="" value="Create" ng-click="createUser()" >
-<table id="manage-user-table" class="custTable" datatable="ng" dt-options="um.dtUser" dt-columns="um.dtUserColumns" style="width: 90%;">
+<table id="manage-user-table" class="custTable table table-bordered" datatable="ng" dt-options="um.dtUser" dt-columns="um.dtUserColumns" style="width: 90%;">
 					<thead>
 						<tr>
 							 <!-- <th scope="col">
