--- a/springboot-crud-rest-app/src/main/resources/public/LoginPage.html
+++ b/springboot-crud-rest-app/src/main/resources/public/LoginPage.html
@@ -2,20 +2,34 @@
 <html ng-app="LoginApp" lang="en" xmlns:th="http://www.thymeleaf.org">
   <title>Login</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-   <link rel="stylesheet" href="/css/angular-toastr.css" />
-  <link rel="stylesheet" type="text/css" href="/css/Login.css"/>
-    <script src="/js/jquery.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Local Setup-->
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/angular-toastr.css" />
+<link rel="stylesheet" type="text/css" href="/css/Login.css"/>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <script src="/js/angular.min.js"></script>
 <script src="/js/angular-resource.js"></script>
- <script src="/js/angular-route.js"></script> 
- <script src="/js/angular-filter.min.js"></script>
-<!-- <script src="/js/angular-ui-router.min.js"></script> -->
+<script src="/js/angular-route.js"></script> 
+<script src="/js/angular-filter.min.js"></script>
 <script src="/js/angular-animate.js"></script>
 <script src="/js/angular-toastr.tpls.js"></script>
- <script src="/js/Login.js"></script> 
+<script src="/js/Login.js"></script> 
+<!-- Deployed war-->
+<!-- <link rel="stylesheet" href="/team/css/bootstrap.min.css">
+<link rel="stylesheet" href="/team/css/angular-toastr.css" />
+<link rel="stylesheet" type="text/css" href="/team/css/Login.css"/>
+<script src="/team/js/jquery.min.js"></script>
+<script src="/team/js/bootstrap.min.js"></script>
+<script src="/team/js/angular.min.js"></script>
+<script src="/team/js/angular-resource.js"></script>
+<script src="/team/js/angular-route.js"></script> 
+<script src="/team/js/angular-filter.min.js"></script>
+<script src="/team/js/angular-animate.js"></script>
+<script src="/team/js/angular-toastr.tpls.js"></script>
+<script src="/team/js/Login.js"></script>  -->
+
 <body ng-controller="LoginController">
 <!-- <div style=" background-image: linear-gradient(to bottom right,#182f4c,#33ccff)!important;margin-left: -6%;">
 <div style="width: 100%; height: 100%;padding-bottom: 19%;" id="Div44" name="Div44" class="div_DD">
