for deployed war

--- a/springboot-crud-rest-app/src/main/resources/public/LoginPage.html
+++ b/springboot-crud-rest-app/src/main/resources/public/LoginPage.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Local Setup-->
-<link rel="stylesheet" href="/css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/angular-toastr.css" />
 <link rel="stylesheet" type="text/css" href="/css/Login.css"/>
 <script src="/js/jquery.min.js"></script>
@@ -15,9 +15,9 @@
 <script src="/js/angular-filter.min.js"></script>
 <script src="/js/angular-animate.js"></script>
 <script src="/js/angular-toastr.tpls.js"></script>
-<script src="/js/Login.js"></script> 
+<script src="/js/Login.js"></script>  -->
 <!-- Deployed war-->
-<!-- <link rel="stylesheet" href="/team/css/bootstrap.min.css">
+<link rel="stylesheet" href="/team/css/bootstrap.min.css">
 <link rel="stylesheet" href="/team/css/angular-toastr.css" />
 <link rel="stylesheet" type="text/css" href="/team/css/Login.css"/>
 <script src="/team/js/jquery.min.js"></script>
@@ -28,7 +28,7 @@
 <script src="/team/js/angular-filter.min.js"></script>
 <script src="/team/js/angular-animate.js"></script>
 <script src="/team/js/angular-toastr.tpls.js"></script>
-<script src="/team/js/Login.js"></script>  -->
+<script src="/team/js/Login.js"></script>
 
 <body ng-controller="LoginController">
 <!-- <div style=" background-image: linear-gradient(to bottom right,#182f4c,#33ccff)!important;margin-left: -6%;">
