--- a/springboot-crud-rest-app/src/main/resources/public/index.html
+++ b/springboot-crud-rest-app/src/main/resources/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Local setup-->
-<!-- <link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/jquery.dataTables.min.css">
 <link rel="stylesheet" href="/css/buttons.dataTables.min.css"> 
 <link rel="stylesheet" href="/css/tempusdominus-bootstrap-4.min.css" />
@@ -42,10 +42,10 @@
 <script src="/js/angular-datatables.fixedcolumns.js"></script>
 <script src="/js/angular-datatables.buttons.min.js"></script>
 <script type="text/javascript" src="/js/angular-datatables.light-columnfilter.min.js"></script> 
-<script src="/js/angular-toastr.tpls.js"></script> -->
+<script src="/js/angular-toastr.tpls.js"></script> 
 
 <!-- For Deployed war-->
-  <link rel="stylesheet" href="/team/css/bootstrap.min.css">
+ <!--  <link rel="stylesheet" href="/team/css/bootstrap.min.css">
  <link rel="stylesheet" href="/team/css/jquery.dataTables.min.css">
  <link rel="stylesheet" href="/team/css/buttons.dataTables.min.css"> 
 <link rel="stylesheet" href="/team/css/tempusdominus-bootstrap-4.min.css" />
@@ -82,7 +82,7 @@
 <script src="/team/js/angular-datatables.fixedcolumns.js"></script>
 <script src="/team/js/angular-datatables.buttons.min.js"></script>
 <script type="text/javascript" src="/team/js/angular-datatables.light-columnfilter.min.js"></script> 
-<script src="/team/js/angular-toastr.tpls.js"></script>
+<script src="/team/js/angular-toastr.tpls.js"></script> -->
 
 <body >
 
@@ -115,21 +115,21 @@
       <!-- Sidebar -->
       <div id="sidebar-wrapperMain" >
       <ul id="sidebar_menu" class="sidebar-nav">
-           <li class="sidebar-brand"><a class="menu-toggle" id="home" ng-click="redirectUrl($event)" href="#">Dashboard<i class="fa fa-bars sub_icon" aria-hidden="true"></i></a></li>
+           <li class="sidebar-brand"  id="home" ng-click="redirectUrl($event)"><a class="menu-toggle" href="#">Dashboard<i class="fa fa-bars sub_icon" aria-hidden="true"></i></a></li>
       </ul>
       <ul  class="sidebar-nav">  
-<li class="sidebar-brand"><a id="customer_master"  ng-click="redirectUrl($event)">Customer<i class="fa fa-user sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand"><a id="vendor_master"   ng-click="redirectUrl($event)">Vendor<i class="fa fa-user-circle sub_icon"></i></a></li> 
-	<li class="sidebar-brand" ><a id="employee_master" ng-click="redirectUrl($event)">Employee<i class="fa fa-users sub_icon" aria-hidden="true"></i></a></li> 
+	<li class="sidebar-brand" id="customer_master" ng-click="redirectUrl($event)"><a>Customer<i class="fa fa-user sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="vendor_master"  ng-click="redirectUrl($event)"><a>Vendor<i class="fa fa-user-circle sub_icon"></i></a></li> 
+	<li class="sidebar-brand" id="employee_master" ng-click="redirectUrl($event)" ><a>Employee<i class="fa fa-users sub_icon" aria-hidden="true"></i></a></li> 
 	<!-- <li class='sidebar-brand' ><a id="product_master"  ng-click="redirectUrl($event)">Product<i class="fa fa-product-hunt sub_icon" aria-hidden="true"></i></a></li> --> 
-	<li class="sidebar-brand"><a id="vehicle_master"  ng-click="redirectUrl($event)">TripSheet<i class="fa fa-truck sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" ><a id="user_master"  ng-click="redirectUrl($event)">User<i class="fa fa-user sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand"><a id="userAccess_master"  ng-click="redirectUrl($event)">Access<i class="fa fa-check-square-o sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand"><a id="billing_master"  ng-click="redirectUrl($event)">Billing<i class="fa fa-money sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" ><a id="receipt_master"  ng-click="redirectUrl($event)">Receipt<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
-<li class="sidebar-brand"><a id="voucher_master"  ng-click="redirectUrl($event)">Voucher<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
-<li class="sidebar-brand" ><a id="ledger_master"  ng-click="redirectUrl($event)">Ledger<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
- <li class="sidebar-brand"><a id="logout"  ng-click="redirectUrl($event)">Logout<i class="fa fa-sign-out sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="vehicle_master" ng-click="redirectUrl($event)"><a>TripSheet<i class="fa fa-truck sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="user_master" ng-click="redirectUrl($event)"><a>User<i class="fa fa-user sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="userAccess_master" ng-click="redirectUrl($event)"><a>Access<i class="fa fa-check-square-o sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="billing_master" ng-click="redirectUrl($event)"><a>Billing<i class="fa fa-money sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="receipt_master" ng-click="redirectUrl($event)"><a>Receipt<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="voucher_master" ng-click="redirectUrl($event)"><a>Voucher<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="ledger_master" ng-click="redirectUrl($event)"><a>Ledger<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
+ 	<li class="sidebar-brand" id="logout" ng-click="redirectUrl($event)"><a>Logout<i class="fa fa-sign-out sub_icon" aria-hidden="true"></i></a></li>
       </ul>
         
       </div>
@@ -151,7 +151,7 @@
 </div>
 <script>
 	//	var localurl ="http://localhost:8086/";
- var localurl ="http://localhost:8086/team";
+ var localurl =location.origin;
 var app = angular.module("homeApp", ["angular.filter","ngRoute","ngResource","datatables","datatables.buttons","ngAnimate", "toastr","datatables.fixedcolumns","datatables.light-columnfilter","datatables.select"]);
 app.config(['$routeProvider',function($routeProvider) {
     $routeProvider
@@ -229,8 +229,8 @@ app.controller('indexController',['$scope','$location', "$timeout", function ($s
 	    }
 	
 	 $scope.redirectUrl= function (data){
-		console.log(data);
-		var menuId = data.target.id
+		//console.log(data);
+		var menuId = data.currentTarget.id;
 		if(menuId == "home"){
 			 $timeout( function(){
 				// angular.element('#navMenu').trigger('click');
@@ -1528,18 +1528,19 @@ $scope.initVeh =function(){
 		   });
 }
 $scope.getCustVenList =function(){
-	 var url=localurl +"/api/v1/combinenameslist";
+	 var url=localurl +"/api/v1/customercodelist";
 	 $http({
 		    method : 'GET',
 		    url : url,
 		   }).then(function successCallback(response) {
-		   //$scope.listCustJson = response.data;
-		   angular.forEach(response.data,function(value,index){
+			 //$scope.listCustJson = response.data;
+			 $scope.listdataJson=response.data;  
+		   /* angular.forEach(response.data,function(value,index){
 			   if(value.customername || value.vendorname){
 				   $scope.listdataJson.push(value.customername ? value.customername : value.vendorname);  
 			   }
 			   
-		   });
+		   }); */
 		   }, function errorCallback(response) {
 		    console.log(response.statusText);
 		   });
@@ -2066,6 +2067,15 @@ angular.forEach($scope.customerInvoiceJson, function(value, key) {
 		
 	};
 	
+	$scope.resetcustItem=function() {
+		$scope.customerInvoice={fromdate:"",todate:""};
+		$scope.customerInvoiceJson=[];
+	}
+
+	$scope.resetvenItem=function() {
+		$scope.vendorInvoice={fromdate:"",todate:"",truckno:""};
+		$scope.vendorInvoiceJson=[];
+	}
 	$scope.resetvenView=function() {
 		$scope.vendorView={fromdate:"",todate:"",vendorname:""};
 		$scope.initvenView();
@@ -2074,7 +2084,6 @@ angular.forEach($scope.customerInvoiceJson, function(value, key) {
 	$scope.resetcustView=function() {
 		$scope.initView();
 		$scope.customerView={fromdate:"",todate:"",customername:""};
-		//$scope.$digest();
 	}
 	
 	$scope.custInvoicePrint=function() {
