--- a/springboot-crud-rest-app/src/main/resources/public/user.html
+++ b/springboot-crud-rest-app/src/main/resources/public/user.html
@@ -1,7 +1,13 @@
 <div >
-<div>
-<input name="" type="button"  style="float: right;margin: 1%; " class="btn btn-primary" id="" value="Create" ng-click="createUser()" >
-<table id="manage-user-table" class="custTable table table-bordered" datatable="ng" dt-options="um.dtUser" dt-columns="um.dtUserColumns" style="width: 90%;">
+<div class="row">
+<div class="col-md-6" style="text-align: right;"><h4>User</h4></div>
+<div class="col-md-6">
+  <input name="" type="button"  style="float: right;margin: 2% 12% 2% 0%; " class="btn btn-primary" id="" value="Create" ng-click="createUser()" >
+</div>
+</div>
+<div class="tableDiv">
+
+<table id="manage-user-table" class="custTable table table-bordered" datatable="ng" dt-options="um.dtUser" dt-columns="um.dtUserColumns" style="width: 98%;">
 					<thead>
 						<tr>
 							 <!-- <th scope="col">
