--- a/springboot-crud-rest-app/src/main/resources/public/userAccess.html
+++ b/springboot-crud-rest-app/src/main/resources/public/userAccess.html
@@ -1,7 +1,13 @@
 <div >
-<div>
+<div class="row">
+<div class="col-md-6" style="text-align: right;"><h4>User Access</h4></div>
+<div class="col-md-6">
+  <!-- <input name="" type="button"  style="float: right;margin: 2% 3% 2% 0%; " class="btn btn-primary" id="" value="Create" ng-click="createUser()" > -->
+</div>
+</div>
+<div class="tableDiv">
 
-<table id="manage-useraccess-table" class="uaTable" datatable="ng" dt-options="dtuseraccess" dt-columns="dtuseraccessColumns" style="width: 90%;">
+<table id="manage-useraccess-table" class="uaTable table table-bordered" datatable="ng" dt-options="dtuseraccess" dt-columns="dtuseraccessColumns" style="width: 98%;">
 					<thead>
 						<tr>
 							<!-- <th scope="col">
