--- a/springboot-crud-rest-app/src/main/resources/public/employee.html
+++ b/springboot-crud-rest-app/src/main/resources/public/employee.html
@@ -1,7 +1,13 @@
 <div >
-<div>
-<input name="" type="button"  style="float: right;margin: 1%; " class="btn btn-primary" id="" value="Create" ng-click="createEmp()" >
-<table id="manage-employee-table" class="custTable table table-bordered" datatable="ng" dt-options="em.dtOptions" dt-column-defs="em.dtColumnDefs" style="width: 90%;">
+<div class="row">
+<div class="col-md-6" style="text-align: right;"><h4>Employee</h4></div>
+<div class="col-md-6">
+<input name="" type="button"  style="float: right; margin: 2% 12% 2% 0%; " class="btn btn-primary" id="" value="Create" ng-click="createEmp()" >
+</div>
+</div>
+
+<div class="tableDiv">
+<table id="manage-employee-table" class="custTable table table-bordered" datatable="ng" dt-options="em.dtOptions" dt-column-defs="em.dtColumnDefs" style="width: 98%;">
 					<thead>
 						<tr>
 							 <!-- <th scope="col">
@@ -48,7 +54,7 @@
 				</table>
 </div>
 <!-- The Modal -->
-  <div class="modal fade" id="empModal">
+  <div class="modal fade" id="empModal" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-dialog-centered modal-lg" >
       <div class="modal-content">
       
